force-app/main/default/objects/Case/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>This field stores the Account County value</description>
    <formula>Account.BillingCountry</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>