force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This fields stores the address line from selected account billing address</description>
    <formula>Account.BillingStreet</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>