force-app/main/default/objects/Case/fields/Answers_Troubleshooting_Questions__c.field-meta.xml
<CustomField>
    <fullName>Answers_Troubleshooting_Questions__c</fullName>
    <description>Field for integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Answers Troubleshooting Questions</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>