force-app/main/default/objects/Case/fields/Awareness_Date__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Date__c</fullName>
    <description>This field is used to capture original notification sent date for Germany complaint handling system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Awareness Date</label>
    <type>Date</type>
</CustomField>