force-app/main/default/objects/Case/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>Used for Order Retraction Process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>