force-app/main/default/objects/Case/fields/Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Death__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cause of Death</label>
    <length>40</length>
    <type>Text</type>
</CustomField>