force-app/main/default/objects/Case/fields/Contact_Person_within_the_Facility__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_within_the_Facility__c</fullName>
    <description>Stores the Medical Facility Contact</description>
    <formula>Medical_Facility__r.PersonContactId</formula>
    <label>Contact Person within the Facility</label>
    <type>Text</type>
</CustomField>