force-app/main/default/objects/Case/fields/Correction_Reason_DXCM__c.field-meta.xml
<CustomField>
    <fullName>Correction_Reason_DXCM__c</fullName>
    <description>Field used for Order Retraction Process.</description>
    <label>Correction Reason DXCM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Verification</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Supply Period (Others)</fullName>
            </value>
            <value>
                <fullName>Supply Period (Lump Sum)</fullName>
            </value>
            <value>
                <fullName>Therapy Demolition</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>