force-app/main/default/objects/Case/fields/Current_Condition_Of_Patient__c.field-meta.xml
<CustomField>
    <fullName>Current_Condition_Of_Patient__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Condition Of Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>