force-app/main/default/objects/Case/fields/Current_Device_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Device_Status__c</fullName>
    <description>Stores if device is still in use</description>
    <label>Current Device Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently in use</fullName>
            </value>
            <value>
                <fullName>No longer using</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>