force-app/main/default/objects/Case/fields/Data_Download__c.field-meta.xml
<CustomField>
    <fullName>Data_Download__c</fullName>
    <label>Data Download (If Applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>