force-app/main/default/objects/Case/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>This field stores the patient birth date</description>
    <formula>Account.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>