force-app/main/default/objects/Case/fields/Date_Of_Event_Known__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Event_Known__c</fullName>
    <description>Stores if date of event is known.</description>
    <label>Date Of Event Known?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>