force-app/main/default/objects/Case/fields/Date_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Issue__c</fullName>
    <description>This field stores the date of event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Of Issue</label>
    <type>Date</type>
</CustomField>