force-app/main/default/objects/Case/fields/Date_Of_Medical_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Medical_Intervention__c</fullName>
    <description>Stores the date/time of medical intervention</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Of Medical Intervention</label>
    <type>Date</type>
</CustomField>