force-app/main/default/objects/Case/fields/Date_Sensor_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Date_Sensor_Inserted__c</fullName>
    <description>This fields stores the date when sensor was inserted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sensor Inserted</label>
    <type>Date</type>
</CustomField>