force-app/main/default/objects/Case/fields/Date_Warranty_Expired__c.field-meta.xml
<CustomField>
    <fullName>Date_Warranty_Expired__c</fullName>
    <description>Store product warranty expiration date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Warranty Expired</label>
    <type>Date</type>
</CustomField>