force-app/main/default/objects/Case/fields/Death_CGM_Related__c.field-meta.xml
<CustomField>
    <fullName>Death_CGM_Related__c</fullName>
    <label>Death CGM Related</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No (if no Death related questions will not be answered)</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>