force-app/main/default/objects/Case/fields/Description_Of_Failure_Issue_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Description_Of_Failure_Issue_Scenario__c</fullName>
    <description>This field stores the details of event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description Of Failure/Issue Scenario</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>