force-app/main/default/objects/Case/fields/Description_of_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Intervention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Intervention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>