force-app/main/default/objects/Case/fields/Dexcom_Account_Username__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_Account_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dexcom Account Username</label>
    <length>40</length>
    <type>Text</type>
</CustomField>