force-app/main/default/objects/Case/fields/Dexcom_App_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_App_Software_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dexcom App Software Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>