force-app/main/default/objects/Case/fields/Did_User_Patient_Get_Readings__c.field-meta.xml
<CustomField>
    <fullName>Did_User_Patient_Get_Readings__c</fullName>
    <description>This fields stores if patient got readings</description>
    <label>Did User/Patient Get Readings?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
                <default>true</default>
                <label>Not Provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>