force-app/main/default/objects/Case/fields/Discussion_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Resolution__c</fullName>
    <description>This field stores the discussion notes/resolution notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussion/Resolution</label>
    <length>8000</length>
    <type>Html</type>
</CustomField>