force-app/main/default/objects/Case/fields/Download_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Download_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Download Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>