force-app/main/default/objects/Case/fields/Duration_Of_Signal_Loss__c.field-meta.xml
<CustomField>
    <fullName>Duration_Of_Signal_Loss__c</fullName>
    <label>Duration Of Signal Loss (If Applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 hour or less</fullName>
            </value>
            <value>
                <fullName>Greater than 1 hour but less than 3 hours</fullName>
            </value>
            <value>
                <fullName>3 hours or more</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>