force-app/main/default/objects/Case/fields/Extent_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Extent_of_Injury__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extent of Injury</label>
    <length>40</length>
    <type>Text</type>
</CustomField>