force-app/main/default/objects/Case/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>This field stores the gender of the patient</description>
    <formula>TEXT(Account.Gender__c)</formula>
    <label>Gender</label>
    <type>Text</type>
</CustomField>