force-app/main/default/objects/Case/fields/Inquiry_Code_and_Summary__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Code_and_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry Code and Summary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Complaint_Code_and_Severity__c.Code_Type__c</field>
            <operation>equals</operation>
            <value>Inquiry</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Complaint_Code_and_Severity__c</referenceTo>
    <relationshipLabel>Cases (Inquiry Code and Severity)</relationshipLabel>
    <relationshipName>Cases_Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>