force-app/main/default/objects/Case/fields/Integration_Executed__c.field-meta.xml
<CustomField>
    <fullName>Integration_Executed__c</fullName>
    <description>This fields stores the value if record is integrated with Dell Boomi</description>
    <label>Integration Executed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>