force-app/main/default/objects/Case/fields/Integration_Executed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Integration_Executed_Date_Time__c</fullName>
    <description>This field stores the date and time when the record was integrated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Executed Date/Time</label>
    <type>DateTime</type>
</CustomField>