force-app/main/default/objects/Case/fields/Integration_Issue__c.field-meta.xml
<CustomField>
    <fullName>Integration_Issue__c</fullName>
    <description>True if Integration Executed Date/Time is earlier than Case Close Date/Time</description>
    <formula>IF((ClosedDate &gt;  Integration_Executed_Date_Time__c), true,false)</formula>
    <label>Integration Issue?</label>
    <type>Checkbox</type>
</CustomField>