force-app/main/default/objects/Case/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Field used for Order Retraction Process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>