force-app/main/default/objects/Case/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Field used in the Order retraction process.</description>
    <formula>Order__r.Invoice_Number__c</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>