force-app/main/default/objects/Case/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>Stores the lot number for selected product line</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lot Number (If Applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>