force-app/main/default/objects/Case/fields/Medical_Caregiver_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Medical_Caregiver_Intervention__c</fullName>
    <description>Stores if medical intervention required.</description>
    <label>Medical/Caregiver Intervention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>