force-app/main/default/objects/Case/fields/Medical_Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Address__c</fullName>
    <description>Stores the billing street of Medical Facility address</description>
    <formula>Medical_Facility__r.BillingStreet</formula>
    <label>Medical Facility Address</label>
    <type>Text</type>
</CustomField>