force-app/main/default/objects/Case/fields/Medical_Facility_Country__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Country__c</fullName>
    <description>Stores the billing country of Medical Facility</description>
    <formula>Medical_Facility__r.BillingCountry</formula>
    <label>Medical Facility Country</label>
    <type>Text</type>
</CustomField>