force-app/main/default/objects/Case/fields/Medical_Facility_Email__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Email__c</fullName>
    <description>stores the email of Medical faciluty</description>
    <formula>Medical_Facility__r.Organzation_Email__c</formula>
    <label>Medical Facility Email</label>
    <type>Text</type>
</CustomField>