force-app/main/default/objects/Case/fields/Medical_Facility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Phone__c</fullName>
    <description>Stores the phone number for medical facility</description>
    <formula>Medical_Facility__r.Phone</formula>
    <label>Medical Facility Phone</label>
    <type>Text</type>
</CustomField>