force-app/main/default/objects/Case/fields/No_RGA_Explanation__c.field-meta.xml
<CustomField>
    <fullName>No_RGA_Explanation__c</fullName>
    <label>No RGA Explanation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient unavailable</fullName>
            </value>
            <value>
                <fullName>Product Unavailable</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Resolved in Troubleshooting - PT decided to keep product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>