force-app/main/default/objects/Case/fields/Other_Medications__c.field-meta.xml
<CustomField>
    <fullName>Other_Medications__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>