force-app/main/default/objects/Case/fields/Paracetamol_Use__c.field-meta.xml
<CustomField>
    <fullName>Paracetamol_Use__c</fullName>
    <description>This fields stores if patient used paracetamol.</description>
    <label>Paracetamol Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>