force-app/main/default/objects/Case/fields/Patient_Using_The_Device_At_Incident__c.field-meta.xml
<CustomField>
    <fullName>Patient_Using_The_Device_At_Incident__c</fullName>
    <inlineHelpText>Was the User/Patient using the device at the time of incident?</inlineHelpText>
    <label>Patient Using The Device At Incident?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>