force-app/main/default/objects/Case/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <description>This field stores the person account email</description>
    <formula>Account.PersonContact.Email</formula>
    <label>Person Email</label>
    <type>Text</type>
</CustomField>