force-app/main/default/objects/Case/fields/Person_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_Home_Phone__c</fullName>
    <description>This field stores the Person Home phone</description>
    <formula>Account.PersonContact.HomePhone</formula>
    <label>Person Home Phone</label>
    <type>Text</type>
</CustomField>