force-app/main/default/objects/Case/fields/Physician_name_of_Time_of_death__c.field-meta.xml
<CustomField>
    <fullName>Physician_name_of_Time_of_death__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician name of Time of death</label>
    <length>40</length>
    <type>Text</type>
</CustomField>