force-app/main/default/objects/Case/fields/Primary_Physician_name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Physician_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Physician name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>