force-app/main/default/objects/Case/fields/Problem_Code_And_Summary__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code_And_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem Code And Summary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Complaint_Code_and_Severity__c.Code_Type__c</field>
            <operation>equals</operation>
            <value>Complaint</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Complaint_Code_and_Severity__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>