force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Stores the product line for device</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STK-GL-005 Dexcom G4 Receiver Kit MG/DL German-Arabic</fullName>
            </value>
            <value>
                <fullName>STK-GL-108 Dexcom G4 Platinum Receiver Kit-German mmol/L</fullName>
            </value>
            <value>
                <fullName>STK-GF-108 German mmol/L, G5 Mobile Receiver Kit</fullName>
            </value>
            <value>
                <fullName>STK-GF-109 mmol/L, G5 Mobile Receiver Kit</fullName>
            </value>
            <value>
                <fullName>STK-GF-109 English mmol/L, G5 Mobile Receiver Kit</fullName>
            </value>
            <value>
                <fullName>STK-GL-010 Dexcom G4 Platinum Receiver Kit-German mg/dl</fullName>
            </value>
            <value>
                <fullName>STK-GF-010 German mg/dL, G5 Mobile Receiver Kit</fullName>
            </value>
            <value>
                <fullName>STK-GF-013 mg/dL, G5 Mobile Receiver Kit</fullName>
            </value>
            <value>
                <fullName>STR-GL-004 Dexcom G4 Platinum Replacement Receiver mg/dl</fullName>
            </value>
            <value>
                <fullName>STR-GL-102 Dexcom G4 Platinum Replacement Receiver Kit- mmol/L</fullName>
            </value>
            <value>
                <fullName>STR-GF-004 G5 OUS mg/dL Replacement Receiver Kit</fullName>
            </value>
            <value>
                <fullName>STR-GF-102 OUS MMOL/L G5 OUS Replacement Receiver kit</fullName>
            </value>
            <value>
                <fullName>STR-GS-004 G6 OUS Replacement Receiver Kit mg/dL</fullName>
            </value>
            <value>
                <fullName>STR-GS-102 G6 OUS Replacement Receiver Kit mmol/L</fullName>
            </value>
            <value>
                <fullName>STK-GS-013 G6 OUS Receiver Kit mg/dL</fullName>
            </value>
            <value>
                <fullName>STK-GS-109 G6 OUS Receiver Kit mmol/L</fullName>
            </value>
            <value>
                <fullName>STS-GF-004 OUS G5 Mobile/G4 PLATINUM - Sensor Kit</fullName>
            </value>
            <value>
                <fullName>STS-GF-001 OUS G5 Mobile/G4 PLATINUM, Sensor Kit-1 Pack</fullName>
            </value>
            <value>
                <fullName>STS-GF-004 OUS G5 Mobile/G4 PLATINUM, Sensor Kit-4 Pack</fullName>
            </value>
            <value>
                <fullName>STS-GL-005 Dexcom G4 Platinum Sensor-1 Pack</fullName>
            </value>
            <value>
                <fullName>STS-GL-006 Dexcom G4 PLATINUM Sensor - OUS 4 Pack</fullName>
            </value>
            <value>
                <fullName>STS-GF-001 OUS G5 Mobile/G4 PLATINUM, -Sensor</fullName>
            </value>
            <value>
                <fullName>STS-GS-002 G6 OUS Sensor Kit 1-pack</fullName>
            </value>
            <value>
                <fullName>STS-GS-003 G6 OUS Sensor Kit 3-pack</fullName>
            </value>
            <value>
                <fullName>STT-GL-004 Dexcom G4 PLATINUM Transmitter Kit-OUS</fullName>
            </value>
            <value>
                <fullName>STT-GF-004 Dexcom G5 Platinum Transmitter</fullName>
            </value>
            <value>
                <fullName>STT-GS-003 G6 OUS Transmitter Kit</fullName>
            </value>
            <value>
                <fullName>SW-350-0011 - Clarity App (Web-based &amp; iOS)</fullName>
            </value>
            <value>
                <fullName>SW10841 G5 OUS Mobile iOS CGM App (mg/dL)</fullName>
            </value>
            <value>
                <fullName>SW10842 G5 OUS Mobile iOS CGM App (mmol/L)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>