force-app/main/default/objects/Case/fields/Product_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Warranty__c</fullName>
    <description>product warranty status</description>
    <label>Product Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Warranty</fullName>
            </value>
            <value>
                <fullName>OOW</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>