force-app/main/default/objects/Case/fields/Receiver_SW__c.field-meta.xml
<CustomField>
    <fullName>Receiver_SW__c</fullName>
    <description>Stores the receiver number</description>
    <label>Receiver SW#</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>SW10050</fullName>
            </value>
            <value>
                <fullName>SW10324</fullName>
            </value>
            <value>
                <fullName>SW10325</fullName>
            </value>
            <value>
                <fullName>SW10505</fullName>
            </value>
            <value>
                <fullName>SW10542</fullName>
            </value>
            <value>
                <fullName>SW10557</fullName>
            </value>
            <value>
                <fullName>SW10586</fullName>
            </value>
            <value>
                <fullName>SW10617</fullName>
            </value>
            <value>
                <fullName>SW10751</fullName>
            </value>
            <value>
                <fullName>SW10829</fullName>
            </value>
            <value>
                <fullName>SW10830</fullName>
            </value>
            <value>
                <fullName>SW10940</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>