force-app/main/default/objects/Case/fields/Receiver_SW_Rev__c.field-meta.xml
<CustomField>
    <fullName>Receiver_SW_Rev__c</fullName>
    <label>Receiver SW Rev</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>5.0.1.035</fullName>
            </value>
            <value>
                <fullName>4.0.1.048</fullName>
            </value>
            <value>
                <fullName>4.0.1.030</fullName>
            </value>
            <value>
                <fullName>3.0.1.030</fullName>
            </value>
            <value>
                <fullName>3.0.1.026</fullName>
            </value>
            <value>
                <fullName>2.0.1.231</fullName>
            </value>
            <value>
                <fullName>2.0.1.230</fullName>
            </value>
            <value>
                <fullName>2.0.1.192</fullName>
            </value>
            <value>
                <fullName>2.0.1.185</fullName>
            </value>
            <value>
                <fullName>2.0.1.158</fullName>
            </value>
            <value>
                <fullName>2.0.1.104</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>