force-app/main/default/objects/Case/fields/Relationship_To_Patient_User__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Patient_User__c</fullName>
    <description>This field is used to stored the relationship of person calling with Patient.</description>
    <label>Relationship To Patient/User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Caretaker</fullName>
            </value>
            <value>
                <fullName>Administrator/Supervisor</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unable/Unwilling to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>