force-app/main/default/objects/Case/fields/Reporter_Address__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If different from user</inlineHelpText>
    <label>Reporter Address</label>
    <type>TextArea</type>
</CustomField>