force-app/main/default/objects/Case/fields/Reporter_name__c.field-meta.xml
<CustomField>
    <fullName>Reporter_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If different from user</inlineHelpText>
    <label>Reporter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>