force-app/main/default/objects/Case/fields/Reporter_phone_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporter_phone_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporter phone #/ Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>