force-app/main/default/objects/Case/fields/Retracted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retracted_Amount__c</fullName>
    <description>We will pre populate this from the Order and it can be changed.</description>
    <label>Retracted Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>